--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -5,8 +5,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <title>Smartizer by sidneylimafilho</title>
-        <link rel="stylesheet" href="/stylesheets/styles.css">
-        <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+        <link href="/stylesheets/styles.css" rel="stylesheet">
+        <link href="/stylesheets/pygment_trac.css" rel="stylesheet">
+        <link href="/rss.xml" rel="alternate" type="application/rss+xml" title="RSS Feed for mysite.com" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
