--- a/themes/default/global.less
+++ b/themes/default/global.less
@@ -1,3 +1,6 @@
+@base: #f938ab;
+@red: #FF0000;
+
 .box-shadow (@x: 0, @y: 0, @blur: 1px, @alpha) {
   
    @val: @x @y @blur rgba(0, 0, 0, @alpha);
@@ -7,12 +10,4 @@
    -moz-box-shadow:    @val;
 }
 
-.box { 
-   @base: #f938ab;
-   color:        saturate(@base, 5%);
-   border-color: lighten(@base, 30%);
-     
-   div { 
-       .box-shadow(0, 0, 5px, 0.4) 
-   }
-}
+
