remove posts sample

--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -174,6 +174,8 @@ section {
                opacity: 0;               
                .transition(opacity, 400ms);
 
+               span{font-size: 18px;}
+
                small{ display: block; }
             }            
          }
