--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -6,11 +6,10 @@
             Smartizer by sidneylimafilho
         </title>
         <link href="/themes/default/css/all.css" rel="stylesheet">
-        <link href="/rss.xml" rel="alternate" type="application/rss+xml" title="sidneylimafilho.com.br"
-        />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        <link href="/rss.xml" rel="alternate" type="application/rss+xml" title="sidneylimafilho.com.br" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">
                                                             
