Update layout banner and right-side

--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -57,7 +57,7 @@ header {
       height: 50px;
       float: left;
       color: transparent;
-      background: url(../img/signature-logo-white.png) no-repeat center;
+      background: url(../img/signature-logo-white.png) no-repeat left center;
       margin: 0px;
    }
 
@@ -94,10 +94,9 @@ header {
                display:block;
                text-align:center;  
                font:18px "HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686", Arial, sans-serif;    
-               color:#ffCC00;                              
+               color:#FFCC00;                              
             }
-            a:hover{     
-               color:#FF00CC;
+            a:hover{                    
                text-decoration:none;
             }
          }
@@ -144,8 +143,16 @@ banner{
 }
 
 section {
-   background-color: #F3F3F3;
+   
+   background: url(../img/corner-shadow-top-left.png) #F3F3F3 no-repeat top left;   
    overflow:auto; /* fix bug background-color dont work */
+
+   .super{
+      background: url(../img/corner-shadow-top-right.png) no-repeat top right;   
+      overflow:auto; /* fix bug background-color dont work */
+      width: 100%;
+      padding-top: 24px;
+   }
 
    .left-side{
       width:610px;
@@ -186,7 +193,51 @@ section {
    }
    .right-side{
       width:250px;
-      float: right;
+      float: right;      
+      overflow: auto;
+
+      .widget{
+         border: 1px solid #E5E5E5;
+         background-color: white;
+         position: relative;
+         margin-bottom: 30px;         
+
+         h1{
+            margin: 0px;
+            padding: 12px 12px;
+            background-color: #DDD;
+         }
+
+         ul{
+            padding: 0px 12px;
+         }
+
+        
+         .button{ 
+            display: table-cell; 
+            width: 64px;
+            height: 64px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 80%;
+         }
+
+         .twitter { background-image: url(../img/twitter.png);  }
+         .facebook { background-image: url(../img/facebook.png);  }
+         .linkedin { background-image: url(../img/linkedin.png);  }
+         .feed { background-image: url(../img/feed.png);  }
+      }
+
+      .widget::after{
+         content: '';
+         position: absolute;
+         height: 7px;
+         bottom: -7px;
+         left: 0;
+         background: url(../img/shadow2.png) no-repeat top center;
+         width: 100%;
+      }
+
 
       ul{
          list-style-type: none;
@@ -198,14 +249,15 @@ section {
 
          small{ display: block;}
 
-         a{color: #ccff33}
-         a:hover{color: #00FFFF}
+         
+         
       }
    }
 }
 
 footer {
-   clear: both;      
+   clear: both; 
+   display: none;     
 }
 
 .wrapper {
@@ -230,11 +282,12 @@ hr {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 20px;
+   font-family: "HelveticaNeueThCn", "HelveticaNeueW01-ThinCn 673383", Arial, sans-serif;
+   font-weight: normal;  
+   .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 0.4));
 }
 
-p, ul, ol, table, pre, dl {
+p, ul, ol, table, h1, h2, h3, h4, h5, h6, pre, dl {
   margin:0 0 20px;
 }
 
@@ -243,15 +296,16 @@ h1, h2, h3 {
 }
 
 h1 {
-  
+   font-size: 24px;
+   color:#333;
 }
 
 h2 {
-  color:#393939;
+   color:#393939;
 }
 
 h3, h4, h5, h6 {
-  color:#494949;
+   color:#494949;
 }
 
 a {    
@@ -261,7 +315,7 @@ a {
    .transition;
 }
 
-a:hover{color:#FF0066; text-decoration:none; }
+a:hover{color:#FF0099; text-decoration:none; }
 
 
 
