--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -39,7 +39,7 @@
 html, body {
   margin: 0px;
   padding: 0px;
-  font:18px "HelveticaNeueMdCn", "HelveticaNeueW01-67MdCn 692710", Arial, sans-serif;
+  font:18px "HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686", Arial, sans-serif;
 }
 
 header, banner, section, footer {
@@ -155,8 +155,9 @@ section {
    }
 
    .left-side{
-      width:610px;
+      width: 584px;
       float: left;
+      padding: 24px;
 
       .posts{
          padding: 0px;
@@ -188,6 +189,12 @@ section {
          li:hover a{            
             opacity: 1;
             color: #FFF;
+         }
+      }
+
+      article {
+         h1 {
+            font-size: 38px;
          }
       }
    }
@@ -274,12 +281,7 @@ small {
   font:13px "HelveticaNeueLtCn","HelveticaNeueW01-47LtCn 692686",Arial,sans-serif;
 }
 
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
-}
+p { text-align: justify; }
 
 h1, h2, h3, h4, h5, h6 {
    font-family: "HelveticaNeueThCn", "HelveticaNeueW01-ThinCn 673383", Arial, sans-serif;
