--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -2,17 +2,20 @@
 layout: default
 ---
 
-<div class="post">
+<article>
   <h1>{{ page.title }}</h1>
+  
   <h4 class="large-bottom">
     Posted on {{ page.date | format_date }}
-    {% if page.category %} in <a href="/categories/{{ page.category | slugize }}">{{ page.category }}</a> {% endif %}
+   <!-- {% if page.category %} em <a href="/categories/{{ page.category | slugize }}">{{ page.category }}</a> {% endif %}-->
   </h4>
+  
   
   <div class="content">
     {{ content }}
   </div>
   
+  <!--
   <hr />
   
   {% if page.tags %}
@@ -41,8 +44,24 @@ layout: default
   
     <br />
   </div>
+  -->
   
   {% unless page.no_comments %}
-    {% include comments.html %}
+    <a name="respond"></a> <!-- For backwards compatibility -->
+    <div id="disqus_thread"></div>
+
+    <script type="text/javascript">
+        var disqus_shortname = 'novafusion';
+        var disqus_identifier = '{{ page.id }}';
+        var disqus_url = '{{ site.url }}{{ page.url }}';
+        
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
   {% endunless %}
-</div>
+</article>
