--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -47,9 +47,11 @@
     <body>
         <header>
             <div class="wrapper">
+                <a href="/">
                 <h1 class="signature">
                     Sidney Lima Filho
                 </h1>
+            </a>
                 <menu>
                     <ul>
                        
