add others social networks

--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -220,13 +220,17 @@ section {
             height: 64px;
             background-repeat: no-repeat;
             background-position: center;
-            background-size: 80%;
+            background-size: 76%;
          }
 
          .twitter { background-image: url(../img/twitter.png);  }
          .facebook { background-image: url(../img/facebook.png);  }
          .linkedin { background-image: url(../img/linkedin.png);  }
          .feed { background-image: url(../img/feed.png);  }
+         .slideshare { background-image: url(../img/slideshare.png);  }
+         .github { background-image: url(../img/github.png);  }
+         .youtube { background-image: url(../img/youtube.png);  }
+         .mail { background-image: url(../img/mail.png);  }
       }
 
       .widget::after{
