--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -10,142 +10,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-        <!--[if lt IE 9]>
-            <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">                                                                                                                                                
-            </script>
-        <![endif]-->
-        <!--[if IE]>
-            <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">                                                                                                                                                
-            </script>
-        <![endif]-->
-        <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript">        
-        </script>
-        <script src="http://www.google.com/jsapi" type="text/javascript">        
-        </script>
-        <script type="text/javascript">
-        var metaTags = document.getElementsByTagName('meta');
-        var i;
-        if (navigator.userAgent.match(/iPhone/i)) {
-            for (i = 0; i < metaTags.length; i++) {
-                if (metaTags[i].name == "viewport") {
-                    metaTags[i].content = "width=device-width, minimum-scale=1.0, maximum-scale=1.0";
-                }
-            }
-            document.addEventListener("gesturestart", gestureStart, false);
-        }
-
-        function gestureStart() {
-            for (i = 0; i < metaTags.length; i++) {
-                if (metaTags[i].name == "viewport") {
-                    metaTags[i].content = "width=device-width, minimum-scale=0.25, maximum-scale=1.6";
-                }
-            }
-        }
-
-        google.load("feeds", "1");
-
-        // FEEDS            
-        google.setOnLoadCallback(function feeds() {
-
-            var user = {
-                name:"sidneylimafilho",
-                gravatar: "13c12ed8bb09f191876ae217829b15ed",
-                mail: "https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ",
-                twitter: "sidneylimafilho",
-                facebook: "sidneylimafilho",
-                linkedin: "sidneylimafilho",
-                youtube: "TheSidneyLimaFilho",
-                github: "sidneylimafilho",
-                slideshare: "sidneylimafilho",
-                feed: "/rss.xml",
-                delicious: {
-                    name: "sidneylimafilho",
-                    tag: "Favorite"
-                }
-            };
-
-            // ICONES            
-            $('.twitter').attr('href', 'http://twitter.com/' + user.twitter);
-            $('.facebook').attr('href', 'http://facebook.com/' + user.facebook);            
-            $('.linkedin').attr('href', 'http://br.linkedin.com/in/' + user.linkedin);
-            $('.feed').attr('href', user.feed);
-
-            $('.youtube').attr('href', 'http://www.youtube.com/user/' + user.youtube);
-            $('.slideshare').attr('href', 'http://slideshare.net/' + user.slideshare);
-            $('.github').attr('href', 'http://github.com/' + user.github);            
-            $('.mail').attr('href', user.mail);
-            
-
-            // GRAVATAR
-            $.getJSON("http://gravatar.com/" + user.gravatar + ".json?callback=?", function(json) {
-                $('#avatar').attr('src', json.entry[0].thumbnailUrl + '?size=80');
-            });
-
-
-            // TWITTER
-            $.getJSON("http://api.twitter.com/1/statuses/user_timeline.json?screen_name=" + user.twitter + "&callback=?", function(json) {
-                document.title = json[0].user.description + " - " + json[0].user.name;
-                $('#nome').html(json[0].user.name);
-                $('#site').html(json[0].user.url);
-                $('#site').attr('href', json[0].user.url);
-                $('#descricao').html(json[0].user.description);
-                $.each(json, function(i, tweet) {
-                    if (!tweet.text.match("@") && $("#twitter i").html() == "Carregando...") {
-                        $('#twitter i').html('"' + tweet.text + '"');
-                        $('#twitter a').html("@" + tweet.user.screen_name);
-                        $('#twitter a').attr("href", "http://twitter.com/" + user.twitter);
-                    }
-                });
-            });
-
-            // YOUTUBE
-            $.getJSON("http://gdata.youtube.com/feeds/api/users/" + user.youtube + "/uploads?v=2&alt=jsonc", function(json) {
-                $("#video").attr("src", json.data.items[0].content[5]);
-            });
-
-            // GITHUB
-            $.getJSON("http://github.com/api/v2/json/repos/show/" + user.github + "?callback=?", function(json) {
-                $('#projetos > .place').html("");
-                $.each(json.repositories.reverse(), function(i, repository) {
-                    $('#projetos > .place').append('<a class="repository" href="http://github.com/' + repository.owner + '/' + repository.name + '" target="_blank"><h3>' + repository.name + '</h3>' + repository.description.substring(0, 40) + '</a>');
-                });
-                $('#projetos').append('<a class="more" href="http://github.com/' + user.github + '" target="_blank">+ projetos</a>');
-            });
-
-/*
-            // FLICKR
-            $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?id=" + user.flickr.self + "&lang=pt-br&tags=" + user.flickr.tag + "&format=json&jsoncallback=?", function(json) {
-                $('#portifolio > .place').html("");
-                $.each(json.items, function(i, item) {
-                    var imgPequena = (item.media.m).replace("_m.jpg", "_s.jpg");
-                    var imgGrande = (item.media.m).replace("_m.jpg", ".jpg");
-                    var titulo = item.title;
-                    $('#portifolio > .place').append('<a href="' + imgGrande + '" target="_blank"><img src="' + imgPequena + '" alt="' + titulo + '" title="' + titulo + '" /></a>');
-                });
-                $('#portifolio').append('<a class="more" href="' + json.link + '" target="_blank">+ imagens</a>');
-            });
-            */
-
-            // DELICIOUS
-            $.getJSON("http://feeds.delicious.com/v2/json/" + user.delicious.self + "/" + user.delicious.tag + "?callback=?", function(json) {
-                $('#sites > .place').html("");
-                $.each(json, function(i, site) {
-                    $('#sites > .place').append('<a class="site" href="' + site.u + '" target="_blank">' + site.d.substring(0, 40) + '</a>');
-                });
-                $('#sites').append('<a class="more" href="http://www.delicious.com/' + user.delicious.self + '/byme" target="_blank">+ sites</a>');
-            });
-
-            // APRESENTACOES
-            var apresentacoes = new google.feeds.Feed("http://www.slideshare.net/rss/user/" + user.slideshare);
-            apresentacoes.load(function(result) {
-                $('#apresentacoes > .place').html("");
-                $.each(result.feed.entries, function(i, slide) {
-                    $('#apresentacoes > .place').append('<a href="' + slide.link + '" target="_blank">' + slide.title + '</a>');
-                });
-                $('#apresentacoes').append('<a class="more" href="http://www.slideshare.net/' + user.slideshare + '" target="_blank">+ apresentações</a>');
-            });
-        });
-        </script>
     </head>
     
     <body>
@@ -155,19 +19,16 @@
                 <menu>
                     <ul>
                         <li>
-                            <a href="javascript:;">PROJETOS</a>
+                            <a href="javascript:;" title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
                         </li>
                         <li>
-                            <a href="javascript:;">LEITURAS</a>
+                            <a href="javascript:;" title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
                         </li>
                         <li>
-                            <a href="javascript:;">VIDEOS</a>
+                            <a href="javascript:;" title="Eventos em que participei palestrando.">PALESTRAS</a>
                         </li>
                         <li>
-                            <a href="javascript:;">CURRICULO</a>
-                        </li>
-                        <li>
-                            <a href="javascript:;">SOBRE MIM</a>
+                            <a href="javascript:;" title="Um pequeno resumo de quem eu sou e porque você deveria se importar.">SOBRE MIM</a>
                         </li>
                     </ul>
                 </menu>
@@ -191,19 +52,24 @@
                     </div>
                     <div class="right-side">
                         <div class="widget">
+                            <span class="gravatar">
+                                <img src="" />
+                            </span>
+                        </div>
+                        <div class="widget">
                             <h2>Redes Sociais
                             </h2>
                             <nav>
-                                <a href="javascript:;" class="button twitter"></a>
-                                <a href="javascript:;" class="button facebook"></a>
-                                <a href="javascript:;" class="button linkedin"></a>
-                                <a href="javascript:;" class="button feed"></a>
+                                <a href="javascript:;" target="_blank" class="button twitter"></a>
+                                <a href="javascript:;" target="_blank" class="button facebook"></a>
+                                <a href="javascript:;" target="_blank" class="button linkedin"></a>
+                                <a href="javascript:;" target="_blank" class="button feed"></a>
                             </nav>
                             <nav>
-                                <a href="javascript:;" class="button slideshare"></a>
-                                <a href="javascript:;" class="button github"></a>
-                                <a href="javascript:;" class="button youtube"></a>
-                                <a href="javascript:;" class="button mail"></a>
+                                <a href="javascript:;" target="_blank" class="button slideshare"></a>
+                                <a href="javascript:;" target="_blank" class="button github"></a>
+                                <a href="javascript:;" target="_blank" class="button youtube"></a>
+                                <a href="javascript:;" target="_blank" class="button mail"></a>
                             </nav>
                         </div>
                         <div class="widget">
@@ -297,3 +163,125 @@
     </body>
 
 </html>
+<!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">                                                                                                                                                
+    </script>
+<![endif]-->
+<!--[if IE]>
+    <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">                                                                                                                                                
+    </script>
+<![endif]-->
+<script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript">        
+</script>
+<script src="http://www.google.com/jsapi" type="text/javascript">        
+</script>
+<script type="text/javascript">
+        var metaTags = document.getElementsByTagName('meta');
+        var i;
+        if (navigator.userAgent.match(/iPhone/i)) {
+            for (i = 0; i < metaTags.length; i++) {
+                if (metaTags[i].name == "viewport") {
+                    metaTags[i].content = "width=device-width, minimum-scale=1.0, maximum-scale=1.0";
+                }
+            }
+            document.addEventListener("gesturestart", gestureStart, false);
+        }
+
+        function gestureStart() {
+            for (i = 0; i < metaTags.length; i++) {
+                if (metaTags[i].name == "viewport") {
+                    metaTags[i].content = "width=device-width, minimum-scale=0.25, maximum-scale=1.6";
+                }
+            }
+        }
+
+        google.load("feeds", "1");
+
+        // FEEDS            
+        google.setOnLoadCallback(function feeds() {
+
+            var user = {
+                name: "sidneylimafilho",
+                gravatar: "13c12ed8bb09f191876ae217829b15ed",
+                mail: "https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ",
+                twitter: "sidneylimafilho",
+                facebook: "sidneylimafilho",
+                linkedin: "sidneylimafilho",
+                youtube: "TheSidneyLimaFilho",
+                github: "sidneylimafilho",
+                slideshare: "sidneylimafilho",
+                feed: "/rss.xml",
+                delicious: {
+                    name: "sidneylimafilho",
+                    tag: "Favorite"
+                }
+            };
+
+            // ICONES            
+            $('.twitter').attr('href', 'http://twitter.com/' + user.twitter);
+            $('.facebook').attr('href', 'http://facebook.com/' + user.facebook);
+            $('.linkedin').attr('href', 'http://br.linkedin.com/in/' + user.linkedin);
+            $('.feed').attr('href', user.feed);
+
+            $('.youtube').attr('href', 'http://www.youtube.com/user/' + user.youtube);
+            $('.slideshare').attr('href', 'http://slideshare.net/' + user.slideshare);
+            $('.github').attr('href', 'http://github.com/' + user.github);
+            $('.mail').attr('href', user.mail);
+
+
+            // GRAVATAR
+            $.getJSON("http://gravatar.com/" + user.gravatar + ".json?callback=?", function(json) {
+                $('.gravatar img').attr('src', json.entry[0].thumbnailUrl + '?size=80');
+            });
+
+
+            // TWITTER
+            $.getJSON("http://api.twitter.com/1/statuses/user_timeline.json?screen_name=" + user.twitter + "&callback=?", function(json) {
+                document.title = json[0].user.description + " - " + json[0].user.name;
+                $('#nome').html(json[0].user.name);
+                $('#site').html(json[0].user.url);
+                $('#site').attr('href', json[0].user.url);
+                $('#descricao').html(json[0].user.description);
+                $.each(json, function(i, tweet) {
+                    if (!tweet.text.match("@") && $("#twitter i").html() == "Carregando...") {
+                        $('#twitter i').html('"' + tweet.text + '"');
+                        $('#twitter a').html("@" + tweet.user.screen_name);
+                        $('#twitter a').attr("href", "http://twitter.com/" + user.twitter);
+                    }
+                });
+            });
+
+            // YOUTUBE
+            $.getJSON("http://gdata.youtube.com/feeds/api/users/" + user.youtube + "/uploads?v=2&alt=jsonc", function(json) {
+                $("#video").attr("src", json.data.items[0].content[5]);
+            });
+
+            // GITHUB
+            $.getJSON("http://github.com/api/v2/json/repos/show/" + user.github + "?callback=?", function(json) {
+                $('#projetos > .place').html("");
+                $.each(json.repositories.reverse(), function(i, repository) {
+                    $('#projetos > .place').append('<a class="repository" href="http://github.com/' + repository.owner + '/' + repository.name + '" target="_blank"><h3>' + repository.name + '</h3>' + repository.description.substring(0, 40) + '</a>');
+                });
+                $('#projetos').append('<a class="more" href="http://github.com/' + user.github + '" target="_blank">+ projetos</a>');
+            });
+
+            // DELICIOUS
+            $.getJSON("http://feeds.delicious.com/v2/json/" + user.delicious.self + "/" + user.delicious.tag + "?callback=?", function(json) {
+                $('#sites > .place').html("");
+                $.each(json, function(i, site) {
+                    $('#sites > .place').append('<a class="site" href="' + site.u + '" target="_blank">' + site.d.substring(0, 40) + '</a>');
+                });
+                $('#sites').append('<a class="more" href="http://www.delicious.com/' + user.delicious.self + '/byme" target="_blank">+ sites</a>');
+            });
+
+            // APRESENTACOES
+            var apresentacoes = new google.feeds.Feed("http://www.slideshare.net/rss/user/" + user.slideshare);
+            apresentacoes.load(function(result) {
+                $('#apresentacoes > .place').html("");
+                $.each(result.feed.entries, function(i, slide) {
+                    $('#apresentacoes > .place').append('<a href="' + slide.link + '" target="_blank">' + slide.title + '</a>');
+                });
+                $('#apresentacoes').append('<a class="more" href="http://www.slideshare.net/' + user.slideshare + '" target="_blank">+ apresentações</a>')
+            });
+        });
+</script>
