--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -175,6 +175,8 @@
 </script>
 <script src="http://www.google.com/jsapi" type="text/javascript">        
 </script>
+<script src="tags.js" type="text/javascript">        
+</script>
 <script type="text/javascript">
         var metaTags = document.getElementsByTagName('meta');
         var i;
@@ -284,4 +286,27 @@
                 $('#apresentacoes').append('<a class="more" href="http://www.slideshare.net/' + user.slideshare + '" target="_blank">+ apresentações</a>')
             });
         });
+</script>
+
+<script type="text/html" id="tagsTemplate">
+<h2 class="post_title">{{page.title}}
+</h2>
+<ul>
+
+ <li class="archive_list">
+    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/%d/%y"}}</time>
+    <a class="archive_list_article_link" href='{.{post.url}}'>{.{post.title}}</a>
+    <p class="summary">
+       <span>{.{post.summary}}</span>
+       <ul class="tag_list">
+          {% for tag in post.tags %}
+          <li class="inline archive_list">
+          <a class="tag_list_link" href="/tag/{.{ tag }}">{.{ tag }}</a>
+          </li>
+          {.%endfor%}
+       </ul>
+    </p>
+ </li>
+
+</ul>
 </script>
