--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -19,7 +19,7 @@
                 <menu>
                     <ul>
                         <li>
-                            <a href="javascript:;" title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
+                            <a href="leituras.htm" title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
                         </li>
                         <li>
                             <a href="javascript:;" title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
@@ -63,9 +63,7 @@
                                 <a href="javascript:;" target="_blank" class="button twitter"></a>
                                 <a href="javascript:;" target="_blank" class="button facebook"></a>
                                 <a href="javascript:;" target="_blank" class="button linkedin"></a>
-                                <a href="javascript:;" target="_blank" class="button feed"></a>
-                            </nav>
-                            <nav>
+                                <a href="javascript:;" target="_blank" class="button feed"></a>                           
                                 <a href="javascript:;" target="_blank" class="button slideshare"></a>
                                 <a href="javascript:;" target="_blank" class="button github"></a>
                                 <a href="javascript:;" target="_blank" class="button youtube"></a>
