fix social media, add my personal presentation and fix width shelfari

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -54,11 +54,8 @@
                         <div class="widget">
                             <span class="gravatar">
                                 <img src="" />
+                                Eu sou Sidney Lima Filho e aqui você saberá sobre quem eu sou e minhas ideias. Abaixo estão as redes sociais que participo e onde você pode me encontrar.
                             </span>
-                        </div>
-                        <div class="widget">
-                            <h2>Redes Sociais
-                            </h2>
                             <nav>
                                 <a href="javascript:;" target="_blank" class="button twitter"></a>
                                 <a href="javascript:;" target="_blank" class="button facebook"></a>
@@ -70,6 +67,7 @@
                                 <a href="javascript:;" target="_blank" class="button mail"></a>
                             </nav>
                         </div>
+                        
                         <div class="widget">
                             <h2>Li e Gostei
                             </h2>
