--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -190,6 +190,10 @@ section {
       article {
          padding-right: 24px;        
       }
+
+      .shelfari{
+         width: 550px;
+      }
    }
 
    .right-side{
@@ -216,8 +220,8 @@ section {
         
          .button{ 
             display: table-cell; 
-            width: 64px;
-            height: 64px;
+            width: 32px;
+            height: 32px;
             background-repeat: no-repeat;
             background-position: center;
             background-size: 76%;
