fix gravatar and width shelfari

--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -192,7 +192,7 @@ section {
       }
 
       .shelfari{
-         width: 550px;
+         width: 600px;
       }
    }
 
@@ -205,7 +205,19 @@ section {
          border: 1px solid #E5E5E5;
          background-color: white;
          position: relative;
-         margin-bottom: 30px;         
+         margin-bottom: 30px;   
+
+         .gravatar{
+            display: block;
+            padding: 4px;
+
+            img {
+               float: left;
+               margin-right: 4px;
+               font-size: 14px;
+               line-height: 16px;
+            }
+         }      
 
          h2{
             margin: 0px;
@@ -261,10 +273,7 @@ section {
             padding: 3px 0px 7px 0px;
          }
 
-         small{ display: block;}
-
-         
-         
+         small{ display: block;}         
       }
    }
 }
