--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -212,6 +212,7 @@ section {
             padding: 4px;
             font-size: 14px;
             line-height: 16px;
+            text-align: justify;
 
             img {
                float: left;
