quem é sidney added

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -28,7 +28,7 @@
                             <a href="javascript:;" title="Eventos em que participei palestrando.">PALESTRAS</a>
                         </li>
                         <li>
-                            <a href="javascript:;" title="Um pequeno resumo de quem eu sou e porque você deveria se importar.">SOBRE MIM</a>
+                            <a href="quem-e-sidney.htm" title="Um pequeno resumo de quem eu sou e porque você deveria se importar.">QUEM É SIDNEY</a>
                         </li>
                     </ul>
                 </menu>
