--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -48,7 +48,8 @@
         <section>
             <div class="super">
                 <div class="wrapper">
-                    <div class="content left-side">{{ content }}
+                    <div class="content left-side">
+                        {{ content }}
                     </div>
                     <div class="right-side">
                         <div class="widget">
