add article in master page

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -49,7 +49,7 @@
             <div class="super">
                 <div class="wrapper">
                     <div class="content left-side">
-                        {{ content }}
+                        <article>{{ content }}</article>                        
                     </div>
                     <div class="right-side">
                         <div class="widget">
