page quem é sidney

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <title>Sidney Lima Filho
+        <title>Sidney Lima Filho - {{ title }}
         </title>
         <link href="/themes/default/css/all.css" rel="stylesheet" />
         <link href="/rss.xml" class="feed" rel="alternate" type="application/rss+xml" title="sidneylimafilho.com.br"
@@ -19,7 +19,7 @@
                 <menu>
                     <ul>
                         <li>
-                            <a href="leituras.htm" title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
+                            <a href="/leituras" title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
                         </li>
                         <li>
                             <a href="javascript:;" title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
@@ -28,7 +28,7 @@
                             <a href="javascript:;" title="Eventos em que participei palestrando.">PALESTRAS</a>
                         </li>
                         <li>
-                            <a href="quem-e-sidney.htm" title="Um pequeno resumo de quem eu sou e porque você deveria se importar.">QUEM É SIDNEY</a>
+                            <a href="/quem-e-sidney" title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
                         </li>
                     </ul>
                 </menu>
@@ -58,14 +58,14 @@
                                 Eu sou Sidney Lima Filho e aqui você saberá sobre quem eu sou e minhas ideias. Abaixo estão as redes sociais que participo e onde você pode me encontrar.
                             </span>
                             <nav>
-                                <a href="javascript:;" target="_blank" class="button twitter"></a>
-                                <a href="javascript:;" target="_blank" class="button facebook"></a>
-                                <a href="javascript:;" target="_blank" class="button linkedin"></a>
-                                <a href="javascript:;" target="_blank" class="button feed"></a>                           
-                                <a href="javascript:;" target="_blank" class="button slideshare"></a>
-                                <a href="javascript:;" target="_blank" class="button github"></a>
-                                <a href="javascript:;" target="_blank" class="button youtube"></a>
-                                <a href="javascript:;" target="_blank" class="button mail"></a>
+                                <a href="javascript:;" target="_blank" class="button twitter" title="Pensamentos rápidos via Twitter."></a>
+                                <a href="javascript:;" target="_blank" class="button facebook" title="Minha vida social no Facebook."></a>
+                                <a href="javascript:;" target="_blank" class="button linkedin" title="Minha rede profissional no Linkedin."></a>
+                                <a href="javascript:;" target="_blank" class="button feed" title="Assine meus posts com o RSS."></a>
+                                <a href="javascript:;" target="_blank" class="button slideshare" title="Veja meus slides no Slideshare."></a>
+                                <a href="javascript:;" target="_blank" class="button github" title="O que desenvolvo e coloco no Github."></a>
+                                <a href="javascript:;" target="_blank" class="button youtube" title="Filmes que assisto via Youtube."></a>
+                                <a href="javascript:;" target="_blank" class="button mail" title="Clique aqui para me enviar uma mensagem."></a>
                             </nav>
                         </div>
                         
