--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -189,11 +189,7 @@ section {
 
       article {
          padding-right: 24px;        
-      }
-
-      .shelfari{
-         width: 580px;
-      }
+      }''
    }
 
    .right-side{
