--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <title>Sidney Lima Filho - {{ title }}
+        <title>Sidney Lima Filho {% if title %}- {{ title }}{% endif %}
         </title>
         <link href="/themes/default/css/all.css" rel="stylesheet" />
         <link href="/rss.xml" class="feed" rel="alternate" type="application/rss+xml" title="sidneylimafilho.com.br"
