--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -339,7 +339,9 @@ a {
 
 a:hover{ color:@primaryColorHover; text-decoration:none; .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 0.15));}
 
-b { font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; }
+b, strong { font-family: "HelveticaNeueMdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; }
+
+i, em { font-family: "HelveticaNeueLtCnO", "HelveticaNeueW01-47LtCn 692686", Helvetica, sans-serif; }
 
 blockquote {
   border-left:1px solid #e5e5e5;
